# polars-list-math

./: .gitignore  AGENT.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: combinations.md  publishing.md  similarity.md
polars_list_math/: __init__.py  _list_combinations.py  _list_mean_similarity.py  _list_similarity.py  _list_zip.py
rust/: Cargo.toml
rust/src/: lib.rs  list_combinations.rs  list_mean_similarity.rs  list_similarity.rs  list_similarity_core.rs  list_zip.rs
tests/: test_list_combinations.py  test_list_mean_similarity.py  test_list_similarity.py  test_list_zip.py
